# async-scraptt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt  scrapy.cfg
scraptt/config/: __init__.py  base.py  scrapy.py
scraptt/config/project/: __init__.py  autothrottle.py  concurrency.py  cookies.py  coroutines.py  extensions.py  http.py  logging.py  middlewares.py  pipelines.py  spider.py
scraptt/interfaces/: __init__.py  arguments.py  post.py
scraptt/ioc/: __init__.py  container.py  wiring.py
scraptt/middlewares/: __init__.py  pyquery.py
scraptt/pipelines/: ckip.py  json.py
scraptt/pipelines/utils/: path.py
scraptt/services/: __init__.py  html_parser.py  latest_index_fetch.py  post_comment.py  post_comment_reaction.py  post_content.py  post_links.py  post_metadata.py
scraptt/signals/: error.py
scraptt/singals/: __init__.py  error.py
scraptt/spiders/: posts.py
